--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,9 @@
 <body>    
 
     <div>
-        <a href='logout'>Log Out</a>
+        <a href='blog'>Main Page</a>
+        <br>
+        <a href='newpost>'>New Post</a>
     </div>
 
     {% with messages = get_flashed_messages(with_categories=True) %}
