--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,16 +2,16 @@
 
 
 {% block content %}
-
+    <h1>Build-A-Blog</h1>
     {% if posts|length == 0 %}
     <p>No posts yet</p>
     {% else %}
     <h2>Previous Posts</h2>
-    <ul>
+    
         {% for post in posts %}
-        <li>{{blog.title}}{{blog.body}}</li>
+        <h4>{{post.title}}</h4>{{post.body}}
         {% endfor %}
         {% endif %}
-    </ul>
+    
 
 {% endblock %}
