--- a/templates/post.html
+++ b/templates/post.html
@@ -3,7 +3,8 @@
 
 {% block content %}
     <h1>Build-A-Blog Post</h1>
-        {% for post in posts %}
+    {% for post in posts %}
         <h2>{{post.title}}</h2>{{post.body}} 
+    {% endfor %}
 
 {% endblock %}
