finally got correct templates to render

--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -3,8 +3,10 @@
 
 {% block content %}
     <h1>Build-A-Blog Post</h1>
-    {% for post in posts %}
+        {% if post.id = request.args('id)') %}
+        {% for post in post %}
         <h2>{{post.title}}</h2>{{post.body}} 
-    {% endfor %}
+        {% endfor %}
+        {% endif %}
 
 {% endblock %}
