I think it all works now

--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -3,10 +3,12 @@
 
 {% block content %}
     <h1>Build-A-Blog Post</h1>
-        {% if post.id = request.args('id)') %}
-        {% for post in post %}
-        <h2>{{post.title}}</h2>{{post.body}} 
-        {% endfor %}
-        {% endif %}
+    
+        <h2>{{  blogpost.title  }}</h2>{{  blogpost.body  }}
+
+        
+
+        
+        
 
 {% endblock %}
