passed first functionality check

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,12 @@
         <a href='blog'>Main Page</a>
         <br>
         <a href='newpost'>New Post</a>
+        <br>
+        <a href='logout'>Log Out</a>
+        <br>
+        <a href='login'>Log In</a>
+        <br>
+        <a href="/">Home</a>
     </div>
 
     {% with messages = get_flashed_messages(with_categories=True) %}
