--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-    <h1>Build-A-Blog Post</h1>
+    <h1>Blogz Post</h1>
     
         <h2>{{  blogpost.title  }}</h2>{{  blogpost.body  }}
 
