--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Register to Build-A-Blog!</h1>
-<form action="/register" method="post">
+<h1>Register to Blogz!</h1>
+<form action="/signup" method="post">
     <table>
         <tr>
-            <td><label for="email">Email</label></td>
+            <td><label for="username">Username</label></td>
             <td>
-                <input name="email" type="email" value="{{ email }}">
+                <input name="username" type="text" value="{{ username }}">
             </td>
         </tr>
         <tr>
