--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -5,6 +5,9 @@
     <h1>Blogz Post</h1>
     
         <h2>{{  blogpost.title  }}</h2>{{  blogpost.body  }}
+        <br>
+        <br>
+        Written by <a href="./blog?user={{  owner.id  }}">{{  blogpost.owner.username  }}</a>
 
         
 
