--- a/templates/singleUser.html
+++ b/templates/singleUser.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Build-A-Blog</h1>
-{% if posts|length == 0 %}
+<h1>Blogz by {{selecteduser.username}}</h1>
+{% if userposts|length == 0 %}
 <p>No posts yet</p>
 {% else %}
 <h2>Previous Posts</h2>
 
-    {% for post in posts %}
-    <h3><a href="./blog?id={{  post.id  }}">{{post.title}}</a></h3>{{post.body}}
+    {% for userpost in userposts %}
+    <h3><a href="./blog?id={{  userpost.id  }}">{{userpost.title}}</a></h3>{{userpost.body}}
     {% endfor %}
     {% endif %}
 {% endblock %}
