--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -7,7 +7,7 @@
         <h2>{{  blogpost.title  }}</h2>{{  blogpost.body  }}
         <br>
         <br>
-        Written by <a href="./blog?user={{  owner.id  }}">{{  blogpost.owner.username  }}</a>
+        Written by <a href="./blog?user={{  blogpost.owner.id  }}">{{  blogpost.owner.username  }}</a>
 
         
 
